# airbnb-clone-backend

./: .gitignore  README.md  pyproject.toml
bookings/: models.py  serializers.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
common/: models.py
config/: schema.py  settings.py  urls.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py
medias/: models.py  serializers.py  views.py
reviews/: models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
wishlists/: models.py  serializers.py  urls.py  views.py
