[tool.poetry]
name = "airbnb-clone2"
version = "0.1.0"
description = ""
authors = ["Soy <soyeon.won@oxbridgeuk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
