[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["Soy <soyeon.won@oxbridgeuk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
strawberry-graphql-django = "^0.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
